--- a/Barbara.html
+++ b/Barbara.html
@@ -36,32 +36,32 @@
 				<span></span>
 				<span></span>
 				<span></span>
-				<ul id="menu_burger">
-					<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-					<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-					<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-					<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-					<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-				</ul>
-			</div>
+			<ul id="menu_burger">
+				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+				<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+				<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+				<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+			</ul>
+		</div>
 	</div>
-		<!-- Desktop Menu -->
-		<ul id="menu">
-			<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-			<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-			<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-			<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-			<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-		</ul>
+	<!-- Desktop Menu -->
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+		<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+	</ul>
 	<!-- Menus -->
 
 <div class="interveiw_subpages">
 	<div class="interview_banner_barbara interview_image">
 
 	</div>
-		<div class="history_bg_orange">
+		<div class="interview_wrapper">
 			<div class="history_title">
-<h1>Barbara Brink</h1>
+<h1>Barbara Brink</h1></br>
 				<p>It was on a Brink family trip to Toronto in the mid-1970s that the idea for Science World was hatched. Barbara’s husband, Russell, had recently been appointed project manager for Vancouver’s Granville Island redevelopment and was researching how public markets functioned in other cities around the world. While he worked, Barbara tried to keep their two young sons—who, she says, were “bouncing on the bed” all day long—entertained. The front desk clerk at their hotel recommended she take them to the Ontario Science Centre. </p>
 				</br>
 
