--- a/Cybele.html
+++ b/Cybele.html
@@ -36,30 +36,30 @@
 				<span></span>
 				<span></span>
 				<span></span>
-				<ul id="menu_burger">
-					<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-					<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-					<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-					<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-					<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-				</ul>
-			</div>
+			<ul id="menu_burger">
+				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+				<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+				<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+				<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+			</ul>
+		</div>
 	</div>
-		<!-- Desktop Menu -->
-		<ul id="menu">
-			<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-			<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-			<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-			<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-			<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-		</ul>
+	<!-- Desktop Menu -->
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+		<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+	</ul>
 	<!-- Menus -->
 
 <div class="interveiw_subpages">
 	<div class="interview_banner_cybele interview_image">
 
 	</div>
-		<div class="history_bg_orange">
+		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Cybele Negris</h1></br>
 				<p>Given the amount of time Cybele Negris has spent at Science World over the past decade, you could forgive her for considering it a second home. As the mother of two, Negris has passed countless hours at the centre walking through the Eureka! Gallery or checking out The Science Behind Pixar exhibition. </p>
@@ -76,9 +76,9 @@
 				<p>Then, using her provincial connections, Negris took things a step further by obtaining a proclamation from the government of BC that declared the first week in November to be Women and Girls in STEAM Week. “I said, ‘If we do it for a week, and we do this every year, we could have lots of organizations start to coalesce around that week and do lots of events.’ So, it's not one event, one Science World event, but something we do across the province.”</p>
 				</br></br>
 				<h2>Working toward a Thriving Future</h2></br>
-				For Negris, having a broad reach is key for Science World, as it continues to be a beacon for scientific literacy and discovery—not just in Vancouver, but all across the province. She points to Symbiosis, a new Science World initiative that has government support and will help build partnerships beyond the city’s borders to cultivate “a sustainable STEAM Learning Ecosystem with equitable access for all learners.” </p>
+				<p>For Negris, having a broad reach is key for Science World, as it continues to be a beacon for scientific literacy and discovery—not just in Vancouver, but all across the province. She points to Symbiosis, a new Science World initiative that has government support and will help build partnerships beyond the city’s borders to cultivate “a sustainable STEAM Learning Ecosystem with equitable access for all learners.” </p>
 				</br>
-				She also sees a future for the institution that builds on its expertise in experiential learning and allows it to become a hub for innovative thinking. “We need to make Science World the place where people will come—and not just for events. People of all ages—not just kids, but teenagers and adults too.” As Negris sees it, the goal of Science World becoming “the place” to bring together scientific ideas from all corners of the province is one that will endure for the next 30 years and beyond.</p>
+				<p>She also sees a future for the institution that builds on its expertise in experiential learning and allows it to become a hub for innovative thinking. “We need to make Science World the place where people will come—and not just for events. People of all ages—not just kids, but teenagers and adults too.” As Negris sees it, the goal of Science World becoming “the place” to bring together scientific ideas from all corners of the province is one that will endure for the next 30 years and beyond.</p>
 				</br></br>
 
 				<p><i>As Science World at TELUS World of Science celebrates our 30th anniversary, we are connecting with people who have made an impact on our physical space and in the community of science enthusiasts and supporters in British Columbia. We present here a selection of their stories, and hope that their words will inspire you to continue to help us ignite wonder and empower dreams for the next generation of STEAM leaders and the people of British Columbia. If you have a story to share about how Science World has impacted your life in a meaningful way, please share it with us online on Twitter, Instagram, or Facebook.
