--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 	    	$('#pagepiling').pagepiling({
 	    		menu: '#menu',
 					touchSensitivity: 1,
-	    		anchors: ['home', 'interviews', 'future', 'history', 'share'],
+	    		anchors: ['home', 'stories', 'initiatives', 'history', 'share'],
 	    		navigation: {
 		            'textColor': '#f2f2f2',
 		            'bulletsColor': '#ccc',
 		            'position': 'right',
-		            'tooltips': ['home', 'interviews', 'future', 'history', 'share']
+		            'tooltips': ['home', 'stories', 'initiatives', 'history', 'share']
 		        }
 			});
 	    });
@@ -105,20 +105,20 @@
 			<span></span>
 		<ul id="menu_burger">
 			<li data-menuanchor="home"><a href="#home">home</a></li>
-			<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
-			<li data-menuanchor="future"><a href="#future">future</a></li>
+			<li data-menuanchor="stories"><a href="#stories">stories</a></li>
+			<li data-menuanchor="initiatives"><a href="#initiatives">initiatives</a></li>
 			<li data-menuanchor="history"><a href="#history">history</a></li>
-			<li data-menuanchor="share"><a href="#share">share</a></li>
+			<li data-menuanchor="share"><a href="#share">share your story</a></li>
 		</ul>
 	</div>
 </div>
 <!-- Desktop Menu -->
 <ul id="menu">
 	<li data-menuanchor="home"><a href="#home">home</a></li>
-	<li data-menuanchor="interviews"><a href="#interviews">interviews</a></li>
-	<li data-menuanchor="future"><a href="#future">future</a></li>
+	<li data-menuanchor="stories"><a href="#stories">stories</a></li>
+	<li data-menuanchor="initiatives"><a href="#initiatives">initiatives</a></li>
 	<li data-menuanchor="history"><a href="#history">history</a></li>
-	<li data-menuanchor="share"><a href="#share">share</a></li>
+	<li data-menuanchor="share"><a href="#share">share your story</a></li>
 </ul>
 <!-- Menus -->
 
@@ -138,7 +138,7 @@
 		<div class="bg_bottom_7"></div>
   </div>
 
-	<div class="section" id="interviews" data-anchor="interviews">
+	<div class="section" id="interviews" data-anchor="stories">
 	<div class="interview_intro">
 		<h1>Science World</br> Stories</h1>
 	</div>
@@ -157,6 +157,34 @@
 
 			<li data-target="#thumbnail_image_left_carousel" data-slide-to="2">
 				<img src="images/slider_03.jpg" alt="slider 03" />
+			</li>
+
+			<!--<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
+				<img src="images/slider_04.jpg" alt="slider 04" />
+			</li>-->
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
+				<img src="images/slider_05.jpg" alt="slider 05" />
+			</li>
+
+			<!--<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
+				<img src="images/slider_06.jpg" alt="slider 06" />
+			</li>-->
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="4">
+				<img src="images/slider_07.jpg" alt="slider 07" />
+			</li>
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
+				<img src="images/slider_08.jpg" alt="slider 08" />
+			</li>
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="6">
+				<img src="images/slider_09.jpg" alt="slider 09" />
+			</li>
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="7">
+				<img src="images/slider_10.jpg" alt="slider 10" />
 			</li>
 
 		</ol>
@@ -194,15 +222,85 @@
 				</div>
 			</div>
 
+			<!--========= Forth Slide
+			<div class="carousel-item">
+				<img src="images/slider_04.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Alan Winter</h1>
+					<p></p>
+				</br><a href="">Read the Interview</a>
+				</div>
+			</div>-->
+
+			<!--========= Fifth Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_05.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Haig Farris</h1>
+					<p>Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community</p>
+				</br><a href="Haig.html">Read the Interview</a>
+				</div>
+			</div>
+
+			<!--========= Sixth Slide
+			<div class="carousel-item">
+				<img src="images/slider_06.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Jimmy Pattison</h1>
+					<p></p>
+				</br><a href="">Read the Interview</a>
+				</div>
+			</div> -->
+
+			<!--========= Seventh Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_07.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Launi Skinner</h1>
+					<p>CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways</p>
+				</br><a href="Launi.html">Read the Interview</a>
+				</div>
+			</div>
+
+			<!--========= Eighth Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_08.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Paige Zheng</h1>
+					<p>A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science</p>
+				</br><a href="Paige.html">Read the Interview</a>
+				</div>
+			</div>
+
+			<!--========= Ninth Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_09.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Rob Lunde</h1>
+					<p>Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections</p>
+				</br><a href="Rob.html">Read the Interview</a>
+				</div>
+			</div>
+
+			<!--========= Tenth Slide =========-->
+			<div class="carousel-item">
+				<img src="images/slider_10.jpg" alt="slider 03" />
+				<div class="carousel-caption thumbnail_image_left_carousel_caption">
+					<h1>Peter M. Brown</h1>
+					<p>Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World</p>
+				</br><a href="Brown.html">Read the Interview</a>
+				</div>
+			</div>
+
 		</div>
 
 	</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
 
 </div>
 
-	<div class="section" id="section2" data-anchor="future">
+	<div class="section" id="section2" data-anchor="initiatives">
 			<div class="future_intro">
-				<h1>BC’s Thriving Future</h1>
+				<h1>Initiatives to Help Build a Thriving Future</h1>
 			</div>
 
 			<!--*-*-*-*-*-*-*-*-*-*- BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
@@ -283,7 +381,7 @@
     	<div class="intro">
     		<h1>WIN A FAMILY MEMBERSHIP</h1>
 				</br>
-    		<h3>From Your Ha-Ha! To Your Ah-Ha! Moments, We Want To Hear Your Favourite Memories Of Science World. Record Your Memory For A Chance To Win A 1-Year Family Membership.</h3>
+    		<h3>From your ha-ha! to your ah-ha! moments, we want to hear your favourite memories of Science World. Record your memory for a chance to win a 1-Year Family Membership.</h3>
 				</br></br>
 				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary">Let's Get Started</a>
 			  </br></br></br>
@@ -309,6 +407,7 @@
 
 
 <script src="js/bootstrap.js"></script>
+<!--<script src="js/touchSwipe.js"></script>-->
 <script src="js/responsive_bootstrap_carousel.js"></script>
 
 </body>
