--- a/Lees.html
+++ b/Lees.html
@@ -37,30 +37,30 @@
 				<span></span>
 				<span></span>
 				<span></span>
-				<ul id="menu_burger">
-					<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-					<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-					<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-					<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-					<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-				</ul>
-			</div>
+			<ul id="menu_burger">
+				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+				<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+				<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+				<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+			</ul>
 		</div>
-		<!-- Desktop Menu -->
-		<ul id="menu">
-			<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-			<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-			<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-			<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-			<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-		</ul>
+	</div>
+	<!-- Desktop Menu -->
+	<ul id="menu">
+		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+		<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+		<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+	</ul>
 	<!-- Menus -->
 
 <div class="interveiw_subpages">
 	<div class="interview_banner_lees interview_image">
 
 	</div>
-		<div class="history_bg_orange">
+		<div class="interview_wrapper">
 			<div class="history_title">
 <h1>Bob and Lily Lee</h1></br>
 				<p>For the Lee family, the practice of giving back is one that spans generations. Robert (Bob) Lee, Founder and Chairperson of Prospero International Realty Inc. and Co-Founder of Wall Financial Corporation, remembers his father quietly sending cheques to his small family village in Southern China—a tradition among those who’d ventured to the Promised Land.
