--- a/history.html
+++ b/history.html
@@ -31,28 +31,28 @@
 
 	<!-- Menus -->
 	<!-- Mobile Menu -->
-<div class="mobile_menu">
-	<div id="menuToggle">
-		<input type="checkbox" />
-			<span></span>
-			<span></span>
-			<span></span>
-		<ul id="menu_burger">
-			<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-			<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-			<li data-menuanchor="future"><a href="index.html#future">future</a></li>
-			<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-			<li data-menuanchor="share"><a href="index.html#share">share</a></li>
-		</ul>
+	<div class="mobile_menu">
+		<div id="menuToggle">
+			<input type="checkbox" />
+				<span></span>
+				<span></span>
+				<span></span>
+			<ul id="menu_burger">
+				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
+				<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+				<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
+				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
+				<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+			</ul>
+		</div>
 	</div>
-</div>
 	<!-- Desktop Menu -->
 	<ul id="menu">
 		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-		<li data-menuanchor="interviews"><a href="index.html#interviews">interviews</a></li>
-		<li data-menuanchor="future"><a href="index.html#future">future</a></li>
+		<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
+		<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
 		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-		<li data-menuanchor="share"><a href="index.html#share">share</a></li>
+		<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
 	</ul>
 	<!-- Menus -->
 
