--- a/history.html
+++ b/history.html
@@ -38,21 +38,23 @@
 				<span></span>
 				<span></span>
 			<ul id="menu_burger">
-				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-				<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
-				<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
-				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-				<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+				<li data-menuanchor="home"><a href="index.html#home" class="button">home</a></li>
+				<li data-menuanchor="stories"><a href="index.html#stories" class="button">stories</a></li>
+				<li data-menuanchor="initiatives"><a href="index.html#initiatives" class="button">initiatives</a></li>
+				<li data-menuanchor="history"><a href="index.html#history" class="button">history</a></li>
+				<li data-menuanchor="share"><a href="index.html#share" class="button">share your story</a></li>
+				<li><a href="media.html" class="button">media</a></li>
 			</ul>
 		</div>
 	</div>
 	<!-- Desktop Menu -->
 	<ul id="menu">
-		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-		<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
-		<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
-		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-		<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+		<li data-menuanchor="home"><a href="index.html#home" class="button">home</a></li>
+		<li data-menuanchor="stories"><a href="index.html#stories" class="button">stories</a></li>
+		<li data-menuanchor="initiatives"><a href="index.html#initiatives" class="button">initiatives</a></li>
+		<li data-menuanchor="history"><a href="index.html#history" class="button">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share" class="button">share your story</a></li>
+		<li><a href="media.html" class="button">media</a></li>
 	</ul>
 	<!-- Menus -->
 
@@ -177,10 +179,10 @@
 			<h1>We’ve reached more than 18 million people</h1>
 			<h5>Under the dome and across the province</h5></br></br>
 			<h1>2,400,000 Students Inspired</h1>
-			<h5>You can’t put a price on science presentations...so we didn’t. Instead, our Scientists and Innovators in the Schools program trains STEAM professionals across the province to deliver free in-class presentations. Since 1989, we have inspired over 2,400,000 students. Get inspired! </h5>
+			<h5>You can’t put a price on science presentations...so we didn’t. Instead, our Scientists and Innovators in the Schools program trains STEAM professionals across the province to deliver free in-class presentations. Since 1989, we have inspired over 2,400,000 students.</h5>
 			</br></br>
 			<h1>100,000 People Connected</h1>
-			<h5>Our Community Science Celebration program celebrates the cool science that’s happening in communities across BC. This program connects the public to organizations, businesses and educational resources in that region—for free! Over its 12-year history, it has connected over 100,000 people to their local STEAM community. Find out where the next celebration will be!</h5>
+			<h5>Our Community Science Celebration program celebrates the cool science that’s happening in communities across BC. This program connects the public to organizations, businesses and educational resources in that region—for free! Over its 12-year history, it has connected over 100,000 people to their local STEAM community.</h5>
 			</br></br>
 			<h1>660,000 Students Visited</h1>
 			<h5>A tour de force...literally. Our On The Road program brings joy, excitement and the wonders of science to K–12 students across the province. Through its 11-year history, the On The Road gymnasium presentations reached over 660,000 students. Now that’s a lot of TP! Hear what students and teachers are saying bout this program.</h5>
