--- a/index.html
+++ b/index.html
@@ -104,21 +104,23 @@
 			<span></span>
 			<span></span>
 		<ul id="menu_burger">
-			<li data-menuanchor="home"><a href="#home">home</a></li>
-			<li data-menuanchor="stories"><a href="#stories">stories</a></li>
-			<li data-menuanchor="initiatives"><a href="#initiatives">initiatives</a></li>
-			<li data-menuanchor="history"><a href="#history">history</a></li>
-			<li data-menuanchor="share"><a href="#share">share your story</a></li>
+			<li data-menuanchor="home"><a href="#home" class="button">home</a></li>
+			<li data-menuanchor="stories"><a href="#stories" class="button">stories</a></li>
+			<li data-menuanchor="initiatives"><a href="#initiatives" class="button">initiatives</a></li>
+			<li data-menuanchor="history"><a href="#history" class="button">history</a></li>
+			<li data-menuanchor="share"><a href="#share" class="button">share your story</a></li>
+			<li><a href="media.html" class="button">media</a></li>
 		</ul>
 	</div>
 </div>
 <!-- Desktop Menu -->
 <ul id="menu">
-	<li data-menuanchor="home"><a href="#home">home</a></li>
-	<li data-menuanchor="stories"><a href="#stories">stories</a></li>
-	<li data-menuanchor="initiatives"><a href="#initiatives">initiatives</a></li>
-	<li data-menuanchor="history"><a href="#history">history</a></li>
-	<li data-menuanchor="share"><a href="#share">share your story</a></li>
+	<li data-menuanchor="home"><a href="#home" class="button">home</a></li>
+	<li data-menuanchor="stories"><a href="#stories" class="button">stories</a></li>
+	<li data-menuanchor="initiatives"><a href="#initiatives" class="button">initiatives</a></li>
+	<li data-menuanchor="history"><a href="#history" class="button">history</a></li>
+	<li data-menuanchor="share"><a href="#share" class="button">share your story</a></li>
+	<li><a href="media.html" class="button">media</a></li>
 </ul>
 <!-- Menus -->
 
@@ -373,21 +375,22 @@
   	<div class="past_intro">
   		<h1>Explore some of our favourite memories </h1>
 		<h2>From the last 30 years</h2>
-		<br/><br/><a href="history.html">Take Me Back</a>
+		<br/><br/><a href="history.html" class="button">Take Me Back</a>
   	</div>
   </div>
 
 	<div class="section" id="section4" data-anchor="share">
     	<div class="intro">
-    		<h1>WIN A FAMILY MEMBERSHIP</h1>
+    		<h1>WIN A 1-YEAR MEMBERSHIP!</h1>
 				</br>
-    		<h3>From your ha-ha! to your ah-ha! moments, we want to hear your favourite memories of Science World. Record your memory for a chance to win a 1-Year Family Membership.</h3>
+    		<h3>From your ha-ha! to your ah-ha! moments, we want to hear your favourite memories of Science World. Record your memory for a chance to win a 1-Year Membership.</h3>
 				</br></br>
-				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary">Let's Get Started</a>
-			  </br></br></br>
+				<a href="https://scienceworld.storytap.com/130/signup?ref=30-anniversary" class="button">Let's Get Started</a>
+			  </br></br>
+			  <a href="terms.html">Terms and Conditions</a></br></br>
 				<p>Help us create those Ah-ha! moments in communities across the province!</p>
 				</br></br>
-				<a href="https://www.scienceworld.ca/donate">Donate</a>
+				<a href="https://www.scienceworld.ca/donate" class="button">Donate</a>
 
 				<div class="bg_top_1"></div>
 				<div class="bg_top_2"></div>
