--- a/Paige.html
+++ b/Paige.html
@@ -37,21 +37,23 @@
 				<span></span>
 				<span></span>
 			<ul id="menu_burger">
-				<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-				<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
-				<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
-				<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-				<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+				<li data-menuanchor="home"><a href="index.html#home" class="button">home</a></li>
+				<li data-menuanchor="stories"><a href="index.html#stories" class="button">stories</a></li>
+				<li data-menuanchor="initiatives"><a href="index.html#initiatives" class="button">initiatives</a></li>
+				<li data-menuanchor="history"><a href="index.html#history" class="button">history</a></li>
+				<li data-menuanchor="share"><a href="index.html#share" class="button">share your story</a></li>
+				<li><a href="media.html" class="button">media</a></li>
 			</ul>
 		</div>
 	</div>
 	<!-- Desktop Menu -->
 	<ul id="menu">
-		<li data-menuanchor="home"><a href="index.html#home">home</a></li>
-		<li data-menuanchor="stories"><a href="index.html#stories">stories</a></li>
-		<li data-menuanchor="initiatives"><a href="index.html#initiatives">initiatives</a></li>
-		<li data-menuanchor="history"><a href="index.html#history">history</a></li>
-		<li data-menuanchor="share"><a href="index.html#share">share your story</a></li>
+		<li data-menuanchor="home"><a href="index.html#home" class="button">home</a></li>
+		<li data-menuanchor="stories"><a href="index.html#stories" class="button">stories</a></li>
+		<li data-menuanchor="initiatives"><a href="index.html#initiatives" class="button">initiatives</a></li>
+		<li data-menuanchor="history"><a href="index.html#history" class="button">history</a></li>
+		<li data-menuanchor="share"><a href="index.html#share" class="button">share your story</a></li>
+		<li><a href="media.html" class="button">media</a></li>
 	</ul>
 	<!-- Menus -->
 
