--- a/index.html
+++ b/index.html
@@ -169,23 +169,23 @@
 				<img src="images/slider_05.jpg" alt="slider 05" />
 			</li>
 
-			<!--<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
-				<img src="images/slider_06.jpg" alt="slider 06" />
-			</li>-->
-
 			<li data-target="#thumbnail_image_left_carousel" data-slide-to="4">
-				<img src="images/slider_07.jpg" alt="slider 07" />
+				<img src="images/slider_06.jpg" alt="slider 06" />
 			</li>
 
 			<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
-				<img src="images/slider_08.jpg" alt="slider 08" />
+				<img src="images/slider_07.jpg" alt="slider 07" />
 			</li>
 
 			<li data-target="#thumbnail_image_left_carousel" data-slide-to="6">
-				<img src="images/slider_09.jpg" alt="slider 09" />
+				<img src="images/slider_08.jpg" alt="slider 08" />
 			</li>
 
 			<li data-target="#thumbnail_image_left_carousel" data-slide-to="7">
+				<img src="images/slider_09.jpg" alt="slider 09" />
+			</li>
+
+			<li data-target="#thumbnail_image_left_carousel" data-slide-to="8">
 				<img src="images/slider_10.jpg" alt="slider 10" />
 			</li>
 
@@ -193,6 +193,7 @@
 
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
+
 
 			<!--========= First Slide =========-->
 			<div class="carousel-item active">
@@ -224,16 +225,6 @@
 				</div>
 			</div>
 
-			<!--========= Forth Slide
-			<div class="carousel-item">
-				<img src="images/slider_04.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Alan Winter</h1>
-					<p></p>
-				</br><a href="">Read the Interview</a>
-				</div>
-			</div>-->
-
 			<!--========= Fifth Slide =========-->
 			<div class="carousel-item">
 				<img src="images/slider_05.jpg" alt="slider 03" />
@@ -244,15 +235,15 @@
 				</div>
 			</div>
 
-			<!--========= Sixth Slide
+			<!--========= Sixth Slide =========-->
 			<div class="carousel-item">
-				<img src="images/slider_06.jpg" alt="slider 03" />
+				<img src="images/slider_06.jpg" alt="slider 06" />
 				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Jimmy Pattison</h1>
-					<p></p>
-				</br><a href="">Read the Interview</a>
+					<h1>Jim Pattison</h1>
+					<p>B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World</p>
+				</br><a href="Jim.html">Read the Interview</a>
 				</div>
-			</div> -->
+			</div>
 
 			<!--========= Seventh Slide =========-->
 			<div class="carousel-item">
