removing page piling js

--- a/Lees.html
+++ b/Lees.html
@@ -28,7 +28,6 @@
 </head>
 <body>
 
-
 	<!-- Menus -->
 	<!-- Mobile Menu -->
 	<div class="mobile_menu">
@@ -38,24 +37,26 @@
 				<span></span>
 				<span></span>
 			<ul id="menu_burger">
-				<li data-menuanchor="home"><a href="index.html#home" class="button">home</a></li>
-				<li data-menuanchor="stories"><a href="index.html#stories" class="button">stories</a></li>
-				<li data-menuanchor="initiatives"><a href="index.html#initiatives" class="button">initiatives</a></li>
-				<li data-menuanchor="history"><a href="index.html#history" class="button">history</a></li>
-				<li data-menuanchor="share"><a href="index.html#share" class="button">share your story</a></li>
+				<li><a href="index.html#home" class="button">home</a></li>
+				<li><a href="index.html#stories" class="button">stories</a></li>
+				<li><a href="index.html#initiatives" class="button">initiatives</a></li>
+				<li><a href="index.html#history" class="button">history</a></li>
+				<li><a href="index.html#share" class="button">share your story</a></li>
 				<li><a href="media.html" class="button">media</a></li>
 			</ul>
 		</div>
 	</div>
 	<!-- Desktop Menu -->
-	<ul id="menu">
-		<li data-menuanchor="home"><a href="index.html#home" class="button">home</a></li>
-		<li data-menuanchor="stories"><a href="index.html#stories" class="button">stories</a></li>
-		<li data-menuanchor="initiatives"><a href="index.html#initiatives" class="button">initiatives</a></li>
-		<li data-menuanchor="history"><a href="index.html#history" class="button">history</a></li>
-		<li data-menuanchor="share"><a href="index.html#share" class="button">share your story</a></li>
-		<li><a href="media.html" class="button">media</a></li>
-	</ul>
+	<div class="desktop_menu">
+		<ul id="menu">
+			<li><a href="index.html#home" class="button">home</a></li>
+			<li><a href="index.html#stories" class="button">stories</a></li>
+			<li><a href="index.html#initiatives" class="button">initiatives</a></li>
+			<li><a href="index.html#history" class="button">history</a></li>
+			<li><a href="index.html#share" class="button">share your story</a></li>
+			<li><a href="media.html" class="button">media</a></li>
+		</ul>
+	</div>
 	<!-- Menus -->
 
 <div class="interveiw_subpages">
