--- a/index.html
+++ b/index.html
@@ -13,36 +13,16 @@
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
 	<link href="css/bootstrap.css" rel="stylesheet" media="all">
-	<link href="css/commerce_columns_carousel.css" rel="stylesheet" media="all">
-	<link href="css/thumbnail_image_left_carousel.css" rel="stylesheet" media="all">
+	<link href="css/commerce_columns_carousel_new.css" rel="stylesheet" media="all">
+	<link href="css/thumbnail_image_left_carousel_new.css" rel="stylesheet" media="all">
 	<link href="css/animate.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/main_new.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<!-- JS -->
   <script src="js/jquery.js" type="text/javascript"></script>
-
-	<script type="text/javascript" src="js/jquery.pagepiling.min.js"></script>
 	<script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
 	<script src="js/jquery.timers-1.2.js" type="text/javascript"></script>
-  <script type="text/javascript">
-		var deleteLog = false;
-
-		$(document).ready(function() {
-	    	$('#pagepiling').pagepiling({
-	    		menu: '#menu',
-					touchSensitivity: 1,
-	    		anchors: ['home', 'stories', 'initiatives', 'history', 'share'],
-	    		navigation: {
-		            'textColor': '#f2f2f2',
-		            'bulletsColor': '#ccc',
-		            'position': 'right',
-		            'tooltips': ['home', 'stories', 'initiatives', 'history', 'share']
-		        }
-			});
-	    });
-    </script>
-
-		<!-- Page Loader Progress Bar -->
+  <!-- Page Loader Progress Bar -->
 		<script type="text/javascript">
 			;(function(){
 				function id(v){return document.getElementById(v); }
@@ -104,28 +84,29 @@
 			<span></span>
 			<span></span>
 		<ul id="menu_burger">
-			<li data-menuanchor="home"><a href="#home" class="button">home</a></li>
-			<li data-menuanchor="stories"><a href="#stories" class="button">stories</a></li>
-			<li data-menuanchor="initiatives"><a href="#initiatives" class="button">initiatives</a></li>
-			<li data-menuanchor="history"><a href="#history" class="button">history</a></li>
-			<li data-menuanchor="share"><a href="#share" class="button">share your story</a></li>
+			<li><a href="#home" class="button">home</a></li>
+			<li><a href="#stories" class="button">stories</a></li>
+			<li><a href="#initiatives" class="button">initiatives</a></li>
+			<li><a href="#history" class="button">history</a></li>
+			<li><a href="#share" class="button">share your story</a></li>
 			<li><a href="media.html" class="button">media</a></li>
 		</ul>
 	</div>
 </div>
 <!-- Desktop Menu -->
-<ul id="menu">
-	<li data-menuanchor="home"><a href="#home" class="button">home</a></li>
-	<li data-menuanchor="stories"><a href="#stories" class="button">stories</a></li>
-	<li data-menuanchor="initiatives"><a href="#initiatives" class="button">initiatives</a></li>
-	<li data-menuanchor="history"><a href="#history" class="button">history</a></li>
-	<li data-menuanchor="share"><a href="#share" class="button">share your story</a></li>
-	<li><a href="media.html" class="button">media</a></li>
-</ul>
+<div class="desktop_menu">
+	<ul id="menu">
+		<li><a href="#home" class="button">home</a></li>
+		<li><a href="#stories" class="button">stories</a></li>
+		<li><a href="#initiatives" class="button">initiatives</a></li>
+		<li><a href="#history" class="button">history</a></li>
+		<li><a href="#share" class="button">share your story</a></li>
+		<li><a href="media.html" class="button">media</a></li>
+	</ul>
+</div>
 <!-- Menus -->
 
-<div id="pagepiling">
-  <div class="section" id="section1" data-anchor="home">
+  <div class="home page" id="home">
 		<div class="logo"><img src="images/logo.png"/></div>
 		<div class="bg_top_1"></div>
 		<div class="bg_top_2"></div>
@@ -140,159 +121,158 @@
 		<div class="bg_bottom_7"></div>
   </div>
 
-	<div class="section" id="interviews" data-anchor="stories">
-	<div class="interview_intro">
-		<h1>Science World</br> Stories</h1>
-	</div>
-	<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="500" data-interval="false" data-pause="hover">
-
-		<!-- Indicators -->
-		<ol class="carousel-indicators thumbnail_image_left_carousel_indicators">
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="0" class="active">
-				<img src="images/slider_01.jpg" alt="slider 01" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="1">
-				<img src="images/slider_02.jpg" alt="slider 02" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="2">
-				<img src="images/slider_03.jpg" alt="slider 03" />
-			</li>
-
-			<!--<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
-				<img src="images/slider_04.jpg" alt="slider 04" />
-			</li>-->
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
-				<img src="images/slider_05.jpg" alt="slider 05" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="4">
-				<img src="images/slider_06.jpg" alt="slider 06" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
-				<img src="images/slider_07.jpg" alt="slider 07" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="6">
-				<img src="images/slider_08.jpg" alt="slider 08" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="7">
-				<img src="images/slider_09.jpg" alt="slider 09" />
-			</li>
-
-			<li data-target="#thumbnail_image_left_carousel" data-slide-to="8">
-				<img src="images/slider_10.jpg" alt="slider 10" />
-			</li>
-
-		</ol>
-
-		<!-- Wrapper for slides -->
-		<div class="carousel-inner" role="listbox">
-
-
-			<!--========= First Slide =========-->
-			<div class="carousel-item active">
-				<img src="images/slider_01.jpg" alt="slider 01" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Cybele Negris</h1>
-					<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
-				</br><a href="Cybele.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Second Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_02.jpg" alt="slider 02">
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Barbara Brink</h1>
-					<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
-				</br><a href="Barbara.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Third Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_03.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Bob and Lily Lee</h1>
-					<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
-				</br><a href="Lees.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Fifth Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_05.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Haig Farris</h1>
-					<p>Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community</p>
-				</br><a href="Haig.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Sixth Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_06.jpg" alt="slider 06" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Jim Pattison</h1>
-					<p>B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World</p>
-				</br><a href="Jim.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Seventh Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_07.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Launi Skinner</h1>
-					<p>CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways</p>
-				</br><a href="Launi.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Eighth Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_08.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Paige Zheng</h1>
-					<p>A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science</p>
-				</br><a href="Paige.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Ninth Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_09.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Rob Lunde</h1>
-					<p>Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections</p>
-				</br><a href="Rob.html">Read the Interview</a>
-				</div>
-			</div>
-
-			<!--========= Tenth Slide =========-->
-			<div class="carousel-item">
-				<img src="images/slider_10.jpg" alt="slider 03" />
-				<div class="carousel-caption thumbnail_image_left_carousel_caption">
-					<h1>Peter M. Brown</h1>
-					<p>Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World</p>
-				</br><a href="Brown.html">Read the Interview</a>
-				</div>
-			</div>
-
+	<div class="stories page" id="stories">
+		<div class="interview_intro">
+			<h1>Science World</br> Stories</h1>
 		</div>
+		<div id="thumbnail_image_left_carousel" class="carousel slide animate_text thumbnail_image_left_carousel_wrapper swipe_x ps_easeOutCirc" data-ride="carousel" data-duration="500" data-interval="false" data-pause="hover">
 
-	</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+			<!-- Indicators -->
+			<ol class="carousel-indicators thumbnail_image_left_carousel_indicators">
 
-</div>
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="0" class="active">
+					<img src="images/slider_01.jpg" alt="slider 01" />
+				</li>
 
-	<div class="section" id="section2" data-anchor="initiatives">
-			<div class="future_intro">
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="1">
+					<img src="images/slider_02.jpg" alt="slider 02" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="2">
+					<img src="images/slider_03.jpg" alt="slider 03" />
+				</li>
+
+				<!--<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
+					<img src="images/slider_04.jpg" alt="slider 04" />
+				</li>-->
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="3">
+					<img src="images/slider_05.jpg" alt="slider 05" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="4">
+					<img src="images/slider_06.jpg" alt="slider 06" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="5">
+					<img src="images/slider_07.jpg" alt="slider 07" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="6">
+					<img src="images/slider_08.jpg" alt="slider 08" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="7">
+					<img src="images/slider_09.jpg" alt="slider 09" />
+				</li>
+
+				<li data-target="#thumbnail_image_left_carousel" data-slide-to="8">
+					<img src="images/slider_10.jpg" alt="slider 10" />
+				</li>
+
+			</ol>
+
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner" role="listbox">
+
+
+				<!--========= First Slide =========-->
+				<div class="carousel-item active">
+					<img src="images/slider_01.jpg" alt="slider 01" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Cybele Negris</h1>
+						<p>Cybele Negris, a member of Science World’s Chair’s Council, is helping to ignite a passion for science in young girls</p>
+					</br><a href="Cybele.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Second Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_02.jpg" alt="slider 02">
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Barbara Brink</h1>
+						<p>For Barbara Brink, founding CEO and Chair of Science World, the organization has always been about much more than putting on exhibits.</p>
+					</br><a href="Barbara.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Third Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_03.jpg" alt="slider 03" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Bob and Lily Lee</h1>
+						<p>Bob and Lily Lee, two of BC’s philanthropists, believe that creating prosperity starts with making a commitment to education and youth</p>
+					</br><a href="Lees.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Fifth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_05.jpg" alt="slider 03" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Haig Farris</h1>
+						<p>Venture capitalist Haig Farris, who was pivotal in securing funding for Science World 30 years ago, is seeing his decades-long efforts paying off in Vancouver’s thriving tech community</p>
+					</br><a href="Haig.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Sixth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_06.jpg" alt="slider 06" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Jim Pattison</h1>
+						<p>B.C. business legend Jim Pattison, who helped deliver Expo 86 and change the province forever, sees a bright future for one of Expo’s greatest legacies: Science World</p>
+					</br><a href="Jim.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Seventh Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_07.jpg" alt="slider 03" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Launi Skinner</h1>
+						<p>CEO of First West Credit Union and chair of the Science World Board, believes that Science World can connect with the leaders of tomorrow in several ways</p>
+					</br><a href="Launi.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Eighth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_08.jpg" alt="slider 03" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Paige Zheng</h1>
+						<p>A resident psychiatrist at St Paul’s Hospital, credits her time as a Science World intern with inspiring her to pursue a career in science</p>
+					</br><a href="Paige.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Ninth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_09.jpg" alt="slider 03" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Rob Lunde</h1>
+						<p>Whether curating Science World’s biggest exhibits or hosting the biggest celebrities, Rob Lunde is consistently focused on making science stick in the minds of his audience through emotional connections</p>
+					</br><a href="Rob.html">Read the Interview</a>
+					</div>
+				</div>
+
+				<!--========= Tenth Slide =========-->
+				<div class="carousel-item">
+					<img src="images/slider_10.jpg" alt="slider 03" />
+					<div class="carousel-caption thumbnail_image_left_carousel_caption">
+						<h1>Peter M. Brown</h1>
+						<p>Financier Peter M. Brown comes from a long line of city builders who have helped shape Vancouver’s most enduring institutions—including Science World</p>
+					</br><a href="Brown.html">Read the Interview</a>
+					</div>
+				</div>
+
+			</div>
+
+		</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
+	</div>
+
+	<div class="initiatives page" id="initiatives">
+			<div class="initiatives_intro">
 				<h1>Initiatives to Help Build a Thriving Future</h1>
 			</div>
 
@@ -362,7 +342,7 @@
 			</div> <!--*-*-*-*-*-*-*-*-*-*- END BOOTSTRAP CAROUSEL *-*-*-*-*-*-*-*-*-*-->
 	</div>
 
-	<div class="section" id="section3"  data-anchor="history">
+	<div class="history page" id="history">
   	<div class="past_intro">
   		<h1>Explore some of our favourite memories </h1>
 		<h2>From the last 30 years</h2>
@@ -370,7 +350,7 @@
   	</div>
   </div>
 
-	<div class="section" id="section4" data-anchor="share">
+	<div class="share page" id="share">
     	<div class="intro">
     		<h1>WIN A 1-YEAR MEMBERSHIP!</h1>
 				</br>
@@ -397,11 +377,9 @@
 			</div>
   </div>
 
-</div>
-
 
 <script src="js/bootstrap.js"></script>
-<!--<script src="js/touchSwipe.js"></script>-->
+<script src="js/touchSwipe.js"></script>
 <script src="js/responsive_bootstrap_carousel.js"></script>
 
 </body>
